--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.1.1",
+    "@material-ui/icons": "^3.0.1",
     "glamor": "^2.20.40",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
+    "react-joyride": "^2.0.0-15",
+    "react-redux": "^5.0.7",
+    "react-responsive-carousel": "^3.1.43",
     "react-scripts": "1.1.5",
     "redux": "^4.0.0"
   },
@@ -14,5 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "eslint": "^5.11.1"
   }
 }
